# rollback-in-a-box

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  icon.svg.import  project.godot
.github/workflows/: build.yml
addons/box3d_rollback/: box3d.gd  box3d.gd.uid  box3d_rollback.gdextension  box3d_rollback.gdextension.uid
api/: box3d-api.json
core/: CMakeLists.txt
core/include/box3d_rollback/: rb_math.h  rb_session.h  rb_simulation.h  rb_world.h  rollback_shim.h
core/src/: rb_session.cpp  rb_world.cpp
docs/: api-boundary.md  api-reference.md  build-from-source.md  determinism-contract.md  dual-engine-architecture.md  network-rollback.md  partial-resimulation.md  raw-box3d-api.md  snapshots-and-hashing.md  testing.md  transport-adapters.md
gdext/: CMakeLists.txt  setup_deps.ps1  setup_deps.sh
gdext/src/: box3d_raw.cpp  box3d_raw.h  box3d_replay.cpp  box3d_replay.h  box3d_rollback_classes.cpp  box3d_rollback_classes.h  box3d_rollback_session.cpp  box3d_rollback_session.h  box3d_rollback_world.cpp  box3d_rollback_world.h  register_types.cpp  register_types.h  rollback_shim.c  rollback_shim.h
tests/: run_all.sh  test_compat.gd  test_compat.gd.uid  test_determinism.gd  test_determinism.gd.uid  test_edge_ids_shapes.gd  test_edge_ids_shapes.gd.uid  test_edge_raw_marshaling.gd  test_edge_raw_marshaling.gd.uid  test_edge_replay.gd  test_edge_replay.gd.uid  test_edge_session.gd  test_edge_session.gd.uid  test_edge_world_hashing.gd  test_edge_world_hashing.gd.uid  test_edge_world_snapshots.gd  test_edge_world_snapshots.gd.uid  test_partial_resim.gd  test_partial_resim.gd.uid  test_raw_api.gd  test_raw_api.gd.uid  test_replay.gd  test_replay.gd.uid  test_session_loopback.gd  test_session_loopback.gd.uid  test_session_multiplayer.gd  test_session_multiplayer.gd.uid  test_smoke.gd  test_smoke.gd.uid
tools/: generate_bindings.py
unreal/: build_thirdparty.sh
unreal/Box3DRollback/: Box3DRollback.uplugin  README.md
unreal/Box3DRollback/Source/Box3DRollback/: Box3DRollback.Build.cs
unreal/Box3DRollback/Source/Box3DRollback/Private/: Box3DApiExport.cpp  Box3DRollbackModule.cpp  Box3DRollbackRawApi.cpp  Box3DRollbackSession.cpp  Box3DRollbackWorld.cpp
unreal/Box3DRollback/Source/Box3DRollback/Public/: Box3DRollbackModule.h  Box3DRollbackRawApi.h  Box3DRollbackSession.h  Box3DRollbackSimulation.h  Box3DRollbackTypes.h  Box3DRollbackWorld.h
